<resources>
    <string name="app_name">PSV Hailing App</string>
    <string name="next">Next</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="_712345678">712345678</string>
    <string name="the_code_was_sent_to">The code was sent to</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="_254712346789">+254712346789</string>
    <string name="code">Code</string>
    <string name="blank_number">Please fill your number</string>
    <string name="verification_failed">Verification Failed, Try Again</string>
    <string name="textview">TextView</string>
    <string name="error_verifying">There was an error verifying</string>
    <string name="item">item</string>
    <string name="logout">Logout</string>
    <string name="sign_up_as_driver">Sign Up As Driver</string>
    <string name="fill_all_blanks">Please fill in all the blanks</string>
    <string name="full_name">Full Name</string>
    <string name="view_profile">View Profile</string>
    <string name="already_have_an_account_click_here">Already have an account? <u>Login</u></string>
    <string name="or">or</string>
    <string name="route_example">eg. Mlolongo - CBD</string>
    <string name="driver_details">Driver Details</string>
    <string name="licence_no">Licence No.</string>
    <string name="matatu_no_plate">Matatu No. Plate</string>
    <string name="routes">Routes</string>
    <string name="seats_available">Seats Available</string>
    <string name="update">Update</string>
    <string name="maps_api_key">AIzaSyDG4LfDl2SkDlvsZcVx3TEc5fhVBQqVUQw</string>
    <string name="confirm">Confirm</string>
    <string name="empty_field">This field is empty</string>
    <string name="invalid_field">This is invalid!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="map">Map</string>
    <string name="available_routes">Available Routes</string>
    <string name="madaraka">Madaraka</string>
    <string name="georgina_nyokabi">Georgina Nyokabi</string>
    <string name="_25471234567">+25471234567</string>
    <string name="cbd">CBD</string>
    <string name="kbc_778c">KBC 778C</string>
    <string name="where_to">Where to?</string>
    <string name="from">From</string>
    <string name="select_time_and_date">Select Date and Time</string>
    <string name="select_pickup">Select Pickup</string>
    <string name="select_dropoff">Select Drop-off</string>
    <string name="available">Available</string>
    <string name="utc">UTC</string>
    <string name="date_format">hh:mm aa</string>
    <string name="additional_information">Additional Information</string>
    <string name="tap_twice">Hint: Tap twice</string>
    <string name="proceed">Proceed</string>
    <string name="add_more">Add more</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="your_trips">Your Trips</string>
    <string name="trip_details">Trip Details</string>
    <string name="loading">Loading..</string>
</resources>