<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp"
    tools:context=".DriverDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_details"
        android:fontFamily="@font/open_sans_bold"
        android:textSize="@dimen/_20ssp"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_12sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_licence_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:theme="@style/Theme.DriverDetails"
        app:counterEnabled="true"
        app:startIconTint="@color/psv_color_accent"
        app:counterMaxLength="10"
        app:helperText="eg. DL-1234567"
        app:startIconDrawable="@drawable/ic_card"
        app:counterTextColor="@color/psv_color_accent"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/_20sdp"
            android:textSize="@dimen/_12ssp"
            android:hint="@string/licence_no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_number_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DriverDetails"
        android:layout_marginBottom="@dimen/_16sdp"
        app:startIconDrawable="@drawable/ic_bus"
        app:startIconTint="@color/psv_color_accent"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/_12ssp"
            android:paddingTop="@dimen/_20sdp"
            android:hint="@string/matatu_no_plate"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/psv_color_accent"
        android:theme="@style/Theme.DriverDetails"
        app:helperText="@string/route_example"
        app:startIconDrawable="@drawable/ic_route"
        app:startIconTint="@color/psv_color_accent"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:paddingTop="@dimen/_20sdp"
            android:hint="@string/routes"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_seats_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/psv_color_accent"
        android:theme="@style/Theme.DriverDetails"
        app:startIconDrawable="@drawable/ic_seat"
        app:startIconTint="@color/psv_color_accent"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/seats_available"
            android:drawableTint="@color/psv_color_accent"
            android:textSize="@dimen/_12ssp"
            android:paddingTop="@dimen/_20sdp"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/_48sdp"
        android:backgroundTint="@color/psv_color_accent"
        android:text="@string/update"
        android:onClick="Update"/>


</LinearLayout>