<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/available_routes_bottom_sheet"
    android:background="@color/white"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="@dimen/_200sdp"
    app:behavior_hideable="false">
    <LinearLayout
        android:id="@+id/input_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_bar_top"
        android:padding="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            app:startIconDrawable="@drawable/ic_brightness"
            android:layout_marginBottom="@dimen/_4sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/where_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/where_to"
            app:startIconDrawable="@drawable/ic_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/_48sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="Next"
            app:layout_constraintTop_toBottomOf="@+id/info" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/header_layout"
        app:layout_constraintTop_toBottomOf="@+id/input_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bottom_sheet_bar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_sheet_textView"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/available_routes"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_14sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_weight="3"
            android:paddingEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_60sdp"
            android:paddingStart="@dimen/_20sdp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_up"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>