<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTimeandDateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Additional Information" />

    </com.google.android.material.appbar.AppBarLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/date"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_20sdp"-->
<!--        app:errorEnabled="true"-->
<!--        android:layout_marginRight="@dimen/_16sdp"-->
<!--        android:layout_marginLeft="@dimen/_16sdp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/appBarLayout1"-->
<!--        app:startIconDrawable="@drawable/ic_date"-->
<!--        app:startIconTint="@color/pwd_color_accent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/white"-->
<!--            android:hint="@string/select_date"-->
<!--            android:paddingTop="@dimen/_20sdp"-->
<!--            android:textSize="@dimen/_14ssp" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/time"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginRight="@dimen/_16sdp"-->
<!--        android:layout_marginLeft="@dimen/_16sdp"-->
<!--        android:layout_marginTop="@dimen/_16sdp"-->
<!--        app:errorEnabled="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/date"-->
<!--        app:startIconDrawable="@drawable/ic_time"-->
<!--        app:startIconTint="@color/pwd_color_accent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/white"-->
<!--            android:hint="@string/select_time"-->
<!--            android:paddingTop="@dimen/_20sdp"-->
<!--            android:textSize="@dimen/_14ssp" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:id="@+id/additional_information_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_information"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/open_sans_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout1"
        android:layout_marginStart="@dimen/_16sdp" />

    <TextView
        android:id="@+id/seats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:text="Select seats"
        app:layout_constraintBottom_toBottomOf="@+id/no_seats"
        app:layout_constraintEnd_toStartOf="@+id/no_seats"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_information_text"
        app:layout_constraintVertical_bias="0.562" />

    <NumberPicker
        android:id="@+id/no_seats"
        android:layout_width="56dp"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_information_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        app:errorEnabled="true"
        app:helperText="eg. I am in a wheelchair"
        app:layout_constraintTop_toBottomOf="@+id/no_seats"
        app:startIconDrawable="@drawable/ic_short_text"
        app:startIconTint="@color/pwd_color_accent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/add_more"
            android:paddingTop="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/_48sdp"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/proceed"
        android:onClick="proceed"
        app:layout_constraintTop_toBottomOf="@+id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>